syntax = "proto3";
package warfare;

message SpawnUnitRequest {}
message SpawnUnitResponse {}

message ListUnitsRequest {}
message ListUnitsResponse {
  repeated UnitInfo units = 1;
}

message UnitInfo {
  string uuid = 1;
  string user_uuid = 2;
}
